--- a/project_task_deadline_search_filters/i18n/nl.po
+++ b/project_task_deadline_search_filters/i18n/nl.po
@@ -1,15 +1,16 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* project_task_deadline_search_filters
+# 	* project_task_deadline_search_filters
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-02 11:06+0000\n"
-"PO-Revision-Date: 2018-05-02 13:07+0200\n"
+"POT-Creation-Date: 2018-05-04 10:15+0000\n"
+"PO-Revision-Date: 2018-05-04 12:21+0200\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -17,31 +18,91 @@ msgstr ""
 
 #. module: project_task_deadline_search_filters
 #: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
-msgid "Deadline <= today"
-msgstr "Deadline <= vandaag"
+msgid "Deadline between current and next 2nd week"
+msgstr "Deadline tussen deze en volgende 2de week"
 
 #. module: project_task_deadline_search_filters
 #: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
-msgid "Deadline > 1 week"
-msgstr "Deadline > 1 week"
+msgid "Deadline between current and next 3rd week"
+msgstr "Deadline tussen deze en volgende 3de week"
 
 #. module: project_task_deadline_search_filters
 #: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
-msgid "Deadline > next 2 weeks"
-msgstr "Deadline > 2 weken"
+msgid "Deadline between current and next 4th week"
+msgstr "Deadline tussen deze en volgende 4de week"
 
 #. module: project_task_deadline_search_filters
 #: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
-msgid "Deadline > next 3 weeks"
-msgstr "Deadline > 3 weken"
+msgid "Deadline between current and next week"
+msgstr "Deadline tussen deze en volgende week"
 
 #. module: project_task_deadline_search_filters
 #: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
-msgid "Deadline > next 4 weeks"
-msgstr "Deadline > 4 weken"
+msgid "Deadline current week"
+msgstr "Deadline deze week"
 
 #. module: project_task_deadline_search_filters
 #: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
-msgid "Deadline > today"
-msgstr "Deadline > vandaag"
+msgid "Deadline next 2nd week"
+msgstr "Deadline volgende 2de week"
 
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Deadline next 3rd week"
+msgstr "Deadline volgende 3de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Deadline next 4th week"
+msgstr "Deadline volgende 4de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Deadline next week"
+msgstr "Deadline volgende week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline between current and next 2nd week"
+msgstr "Taken met Deadline tussen deze en volgende 2de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline between current and next 3rd week"
+msgstr "Taken met Deadline tussen deze en volgende 3de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline between current and next 4th week"
+msgstr "Taken met Deadline tussen deze en volgende 4de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline current and next week"
+msgstr "Taken met Deadline tussen deze en volgende week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline current week"
+msgstr "Taken met Deadline in deze week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline next 2nd week"
+msgstr "Taken met Deadline volgende 2de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline next 3rd week"
+msgstr "Taken met Deadline volgende 3de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+#, fuzzy
+msgid "Tasks with Deadline next 4th week"
+msgstr "Taken met Deadline volgende 4de week"
+
+#. module: project_task_deadline_search_filters
+#: model:ir.ui.view,arch_db:project_task_deadline_search_filters.view_task_search_form_deadline_filters
+msgid "Tasks with Deadline next week"
+msgstr "Taken met Deadline volgende week"
